# rlsf-verified

./: .csdp.cache  .dockerignore  .gitignore  .lia.cache  .nia.cache  Cargo.toml  Makefile  README.adoc  flake.nix  liblib.rlib  literature.adoc  prop2verif.adoc  refinedrust.adoc  rlsf-index-calc.adoc  rlsf.adoc  status.adoc  trace  tsm_silly.long-type-8090906972500165064.txt  verus-rlsf.adoc  verus-theory.adoc  verus-tips.adoc  verus.adoc  zhangetal.adoc
.claude/: settings.local.json
benches/: Cargo.toml  alloc_bench.rs
benches/src/: aaaddd16b_original.rs  aaaddd16b_verified.rs  aaaddd16k_original.rs  aaaddd16k_verified.rs  aaaddd256b_original.rs  aaaddd32b_original.rs  aaaddd32b_verified.rs  aaaddd4k_original.rs  aaaddd4k_verified.rs  aaaddd512b_original.rs  aaaddd512b_verified.rs  aaaddd64b_verified.rs  aaaddd8b_original.rs  aaaddd8b_verified.rs  aaaddd8k_original.rs  aaaddd8k_verified.rs  alt16k_original.rs  alt16k_verified.rs  alt256b_original.rs  alt256b_verified.rs  alt32b_original.rs  alt32b_verified.rs  alt4k_original.rs  alt4k_verified.rs  alt512b_original.rs  alt512b_verified.rs  alt64b_original.rs  alt8b_original.rs  alt8k_original.rs  alt8k_verified.rs  coalesce2k_original.rs  coalesce2k_verified.rs  coalesce32b_original.rs  coalesce32b_verified.rs  coalesce4k_original.rs  coalesce4k_verified.rs  coalesce512b_original.rs  coalesce512b_verified.rs  coalesce64b_original.rs  coalesce64b_verified.rs  (+16 more)
docs/: metrics.txt  prop2verif.adoc  rlsf-index-calc.adoc  rlsf.adoc  verus-theory.adoc  verus-tips.adoc  verus-tsm.adoc
html/: README.html  prop2verif.html  refinedrust.html  rlsf.html  zhangetal.html
misc/: bench.py  bench.sh  bit_rep.rs  check.sh  extract_ir.sh  graph_pcm.rs  idata.rs  ll_poc.rs  setup_kernel.sh  table-gen.py
misc/benchmark/: main.py  pyproject.toml
misc/docker/: Dockerfile  patch_vstd.py
misc/rlsf-verif-core/output/rlsf_verif_core/proofs/: proof_add_42.v
misc/rlsf-verif-core/src/: int.rs  utils.rs
misc/rr-ex/: Cargo.toml  dune-project  post_gen.sh  rr_shims.json  rustc-ice-2024-09-10T01:03:08.393963209Z-34717.txt  rustc-ice-2024-09-10T02:14:59.832243353Z-62362.txt  rustc-ice-2024-09-17T01:55:09.30911988Z-81373.txt  rustc-ice-2024-10-17T01:14:53.810193863Z-31024.txt  rustc-ice-2024-10-23T23:49:33.093601851Z-29446.txt  rustc-ice-2024-10-23T23:50:43.238790518Z-29757.txt  rustc-ice-2024-10-23T23:54:02.851489612Z-30573.txt  shims.v
misc/rr-ex-utils/: .gitignore
misc/rr-ex-utils/src/: lib.rs
misc/rr-ex/coq/: bitops.v  model.v
misc/rr-ex/output/rr_ex/proofs/: proof_NonNullFBH_as_mut.v  proof_as_mut.v  proof_fbh_id.v  proof_link_free_block.v  proof_main.v  proof_mutate_struct.v  proof_ptr_rw.v  proof_read_raw_struct.v  proof_sill.v  proof_silly.v  proof_silly_tuple.v  proof_utils_examples_ex_id_usize.v  proof_utils_examples_sat_sub_min.v  proof_utils_examples_silly.v  proof_utils_examples_silly_option.v  proof_utils_id_usize.v
misc/rr-ex/stdlib/: dune  refinedrust-stdlib-contrib.opam
misc/rr-ex/stdlib/ptr/: RefinedRust.toml
rlsf-verif-core/: Cargo.toml  RefinedRust.toml
rlsf-verif-core/src/: lib.rs
rlsf-verified/: Cargo.toml  lib.long-type-2860460412705229337.txt  verusdoc.sh
rlsf-verified-tests/: Cargo.toml
rlsf-verified-tests/src/: aaaddd256b_verified.rs  aaaddd2k_original.rs  aaaddd2k_verified.rs  aaaddd64b_original.rs  alt16b_original.rs  alt16b_verified.rs  alt16k_original.rs  alt16k_verified.rs  alt256b_original.rs  alt256b_verified.rs  alt2k_original.rs  alt2k_verified.rs  alt32b_original.rs  alt32b_verified.rs  alt64b_original.rs  alt64b_verified.rs  alt8b_original.rs  alt8b_verified.rs  common.rs  main.rs
rlsf-verified-tests/tests/: tlsf_tests.rs
rlsf-verified/src/: bits.rs  block_index.rs  ghost_tlsf.rs  half_open_range.rs  lib.rs  linked_list.rs  rational_numbers.rs  relation_utils.rs
rr-ex/: RefinedRust.toml  extra_specs.v  model.v  post_gen.sh  rr_shims.json  rustc-ice-2024-09-10T01:39:00.901720299Z-48350.txt  rustc-ice-2024-09-17T01:06:51.716456132Z-49874.txt  rustc-ice-2024-10-17T01:32:55.422951135Z-33056.txt  rustc-ice-2024-10-24T00:40:30.765316142Z-34492.txt
rr-ex-utils/: Cargo.toml  dune-project
rr-ex/coq/: bitops.v  dune  extra_specs.v  model.v
rr-ex/output/rr_ex/proofs/: proof_Tlsf_get_first_free.v  proof_bitop.v  proof_freeblk_id.v  proof_main.v  proof_mut_ref_test2.v  proof_mutate_struct.v  proof_rrptr_replace.v  proof_silly_deref.v  proof_silly_option.v  proof_usizeops.v  proof_utils_examples_clz_2.v  proof_utils_examples_map_floor.v  proof_utils_examples_rotr_higher.v  proof_utils_examples_sat_add_max.v  proof_utils_examples_silly3.v  proof_utils_examples_silly_tuple.v  proof_utils_examples_wrap_add_max.v  proof_utils_examples_wrap_sub_max.v
rr-ex/src/: main.rs  utils.rs
rr-ex/stdlib/: Makefile
rr-ex/stdlib/mem/: rr_shims.json
src/: all_blocks.rs  allocate.rs  bitmap.rs  bits.rs  block.rs  block_index.rs  deallocate.rs  ghost_tlsf.rs  half_open_range.rs  half_open_range_rat.rs  header.rs  initialize.rs  lib.rs  linked_list.rs  mapping.rs  ordered_pointer_list.rs  parameters.rs  rational_numbers.rs  relation_utils.rs  search_block.rs  unverified_api.rs  utils.rs
stdlib/: Makefile  dune-project
stdlib/mem/: RefinedRust.toml
stdlib/mem/src/: lib.rs
stdlib/ptr/: Cargo.toml
stdlib/ptr/src/: lib.rs
verus-ex/: Cargo.toml  linkedlist.rs  run_verusdoc.sh  singly_linked_list_trivial.rs
verus-ex/.verus-log/: crate-call-graph-full-initial.dot  crate-call-graph-full-simplified.dot  crate-call-graph-nostd-initial.dot  crate-call-graph-nostd-simplified.dot  crate-lifetime.rs  crate-simple.vir  crate.triggers  crate.vir  root-final.air  root-poly.vir  root.air  root.smt2  root.smt_transcript
verus-ex/src/: bitops.rs  dll_ex.rs  main.rs  rational_axiomaization.rs  silly.rs  singly_linked_list_nontrivial.rs  singly_linked_list_trivial.rs  singly_linked_list_trivial_minified.rs  spinlock.rs  tlsf.rs  tsm_silly.rs
