[package]
name = "rlsf-verified-benches"
version = "0.1.0"
edition = "2024"

[dependencies]
vstd = { git = "https://github.com/verus-lang/verus.git" }
rlsf-verified = { path = "..", features = ["std"] }
rlsf = "0.2.2"

[profile.release]
lto = false
codegen-units = 1
debug = true
overflow-checks = true

[[bin]]
name = "alt8b-verified"
path = "src/alt8b_verified.rs"

[[bin]]
name = "alt16b-verified"
path = "src/alt16b_verified.rs"

[[bin]]
name = "alt32b-verified"
path = "src/alt32b_verified.rs"

[[bin]]
name = "alt64b-verified"
path = "src/alt64b_verified.rs"

[[bin]]
name = "alt256b-verified"
path = "src/alt256b_verified.rs"

[[bin]]
name = "alt2k-verified"
path = "src/alt2k_verified.rs"

[[bin]]
name = "alt16k-verified"
path = "src/alt16k_verified.rs"


[[bin]]
name = "alt8b-original"
path = "src/alt8b_original.rs"

[[bin]]
name = "alt16b-original"
path = "src/alt16b_original.rs"

[[bin]]
name = "alt32b-original"
path = "src/alt32b_original.rs"

[[bin]]
name = "alt64b-original"
path = "src/alt64b_original.rs"

[[bin]]
name = "alt256b-original"
path = "src/alt256b_original.rs"

[[bin]]
name = "alt2k-original"
path = "src/alt2k_original.rs"

[[bin]]
name = "alt16k-original"
path = "src/alt16k_original.rs"

[[bin]]
name = "aaaddd8b-verified"
path = "src/aaaddd8b_verified.rs"

[[bin]]
name = "aaaddd16b-verified"
path = "src/aaaddd16b_verified.rs"

[[bin]]
name = "aaaddd32b-verified"
path = "src/aaaddd32b_verified.rs"

[[bin]]
name = "aaaddd64b-verified"
path = "src/aaaddd64b_verified.rs"

[[bin]]
name = "aaaddd256b-verified"
path = "src/aaaddd256b_verified.rs"

[[bin]]
name = "aaaddd2k-verified"
path = "src/aaaddd2k_verified.rs"

[[bin]]
name = "aaaddd16k-verified"
path = "src/aaaddd16k_verified.rs"

[[bin]]
name = "aaaddd8b-original"
path = "src/aaaddd8b_original.rs"

[[bin]]
name = "aaaddd16b-original"
path = "src/aaaddd16b_original.rs"

[[bin]]
name = "aaaddd32b-original"
path = "src/aaaddd32b_original.rs"

[[bin]]
name = "aaaddd64b-original"
path = "src/aaaddd64b_original.rs"

[[bin]]
name = "aaaddd256b-original"
path = "src/aaaddd256b_original.rs"

[[bin]]
name = "aaaddd2k-original"
path = "src/aaaddd2k_original.rs"

[[bin]]
name = "aaaddd16k-original"
path = "src/aaaddd16k_original.rs"

[[bin]]
name = "ada8b"
path = "src/ada8b.rs"

[[bin]]
name = "ada16b"
path = "src/ada16b.rs"

[[bin]]
name = "ada32b"
path = "src/ada32b.rs"

[[bin]]
name = "ada64b"
path = "src/ada64b.rs"
