opam-version: "2.0"
name: "refinedrust"
synopsis: "RefinedRust verification framework"
maintainer: "RefinedRust contributors"
authors: "RefinedRust contributors"
description: """
custom stdlib for refinedrust
"""
license: "BSD-3-Clause"

depends: [
  "refinedrust" {= version | = "~dev"}
]

build: [
  [make "generate_stdlib"]
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
